--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   name="d10Switch"
                />
                <label class="custom-control-label" for="customSwitch1"
-                  >Animal</label
+                  >Image</label
                >
             </div>
          </form>
